initial push of images

--- a/alexs-photo-clock.html
+++ b/alexs-photo-clock.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scalre=1.0" />
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-	<title>Alex's Photo Ticker</title>
+	<title>Photo Control Panel</title>
 	
 	<link rel="stylesheet" type="text/css" href="photo-style.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -26,41 +26,95 @@ $(function() {
 </head>
 
 <body>
+	<nav>
+		<div class = "nav">
+			<a href="index.html" class="active"> ABOUT </a>
+			<a href="about.html" >CONTACT</a>
+		</div> 
+	</nav>
+	
+	<div class="intro2">
 	<div class="intro">
+			<h1> SHASHIN O KOKAN DESU </h1>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+				Welcome to the "Shashin o Kokan desu" page. 
+
 			</p>
-			<img src="http://placekitten.com/100/100" />
-	</div>
+				This page let's you wirelessly change the photos on your "Shashin" photo display. Choose which image you want your loved one to see at any time and from any place. All you need to do is click on the image you want to select below and the photo display will flip to that image. The black border shows you which image is selected at any given moment.	
+			</p>
+			<!-- 	<img src="http://placekitten.com/100/100" />    -->
 
 	<div class="wrap">
 
 		<div class ="box">
 			<div class="innerContent">
-				<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/12.jpg" />
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08762.JPG" />
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent">
-				<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/12.jpg" />
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08771.JPG" />
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent">
-				<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/3.jpg" />
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08818.JPG" />
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent">
-				<img src="http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/images/demo/3.jpg" />
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08831.JPG" />
 			</div>
 		</div>
 
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08919.JPG" />
+			</div>
+		</div>
 
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08940.JPG" />
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09042.JPG" />
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09062.JPG" />
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09095.JPG" />
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09113.JPG" />
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09306.JPG" />
+			</div>
+		</div>
+
+		</div>
 	</div> <!-- end wrap div -->
+</div>
 
 </body>
 </html>
