css style update and extra image

--- a/alexs-photo-clock.html
+++ b/alexs-photo-clock.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-	<title>Photo Control Panel</title>
+	<title>Flipping Shashin</title>
 	
 	<link rel="stylesheet" type="text/css" href="photo-style.css">
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -34,13 +34,14 @@ $(function() {
 	
 	<div class="intro2">
 	<div class="intro">
-			<h1> SHASHIN O KOKAN DESU </h1>
+			<h1> FLIPPING SHASHIN</h1>
 			<p>
-				Welcome to the "Shashin o Kokan desu" page. 
+				Welcome to the "Flipping Shashin" page. 
 
 			</p>
-				This page let's you wirelessly change the photos on your "Shashin" photo display. Choose which image you want your loved one to see at any time and from any place. All you need to do is click on the image you want to select below and the photo display will flip to that image. The black border shows you which image is selected at any given moment.	
+				This page let's you wirelessly change the photos on your "Flipping Shashin" photo display. Choose which image you want your loved one to see at any time and from any place. All you need to do is click on the image you want to select below and the photo display will flip to that image. The coloring of the image shows you which image is selected at any given moment.	
 			</p>
+
 			<!-- 	<img src="http://placekitten.com/100/100" />    -->
 			
 	</div>
@@ -56,7 +57,15 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08771.JPG" />
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC00582.JPG" />
+				<span></span>
+		
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent">
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08940.JPG " />
 				<span></span>			
 			</div>
 		</div>
@@ -86,7 +95,7 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08940.JPG" />
+				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08771.JPG" />
 				<span></span>
 			</div>
 		</div>
@@ -125,7 +134,7 @@ $(function() {
 			<div class="innerContent">
 				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09306.JPG" />
 				<span></span>
-				
+
 			</div>
 		</div>
 
