All photos now available

--- a/alexs-photo-clock.html
+++ b/alexs-photo-clock.html
@@ -63,7 +63,7 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="1">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08762.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC08771.JPG" />
 				<span></span>
 		
 			</div>
@@ -71,7 +71,7 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="2">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC00582.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00482.JPG" />
 				<span></span>
 		
 			</div>
@@ -79,14 +79,14 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="3">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08940.JPG " />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC09306.JPG" />
 				<span></span>			
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent" id="4">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08818.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC09042.JPG" />
 				<span></span>
 
 			</div>
@@ -94,7 +94,7 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="5">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08831.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00582.JPG" />
 				<span></span>
 		
 			</div>
@@ -102,35 +102,35 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="6">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08919.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC09062.JPG" />
 				<span></span>
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent" id="7">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC08771.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC08831.JPG" />
 				<span></span>
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent" id="8">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09042.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00152.JPG" />
 				<span></span>
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent" id="9">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09062.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC09095.JPG" />
 				<span></span>
 			</div>
 		</div>
 
 		<div class ="box">
 			<div class="innerContent" id="10">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09095.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC09113.JPG" />
 				<span></span>
 
 			</div>
@@ -138,7 +138,7 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="11">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09113.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC08940.JPG" />
 				<span></span>
 
 			</div>
@@ -146,11 +146,73 @@ $(function() {
 
 		<div class ="box">
 			<div class="innerContent" id="12">
-				<img src="http://166.78.159.225/~arc507/uploads/CDNI-FlipDisplay/DSC09306.JPG" />
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00546.JPG" />
 				<span></span>
 
 			</div>
 		</div>
+
+				<div class ="box">
+			<div class="innerContent" id="13">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC08762.JPG" />
+				<span></span>
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="14">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC08919.JPG" />
+				<span></span>
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="15">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00818.JPG" />
+				<span></span>
+
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="16">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00067.JPG" />
+				<span></span>
+
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="17">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00293.JPG" />
+				<span></span>
+
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="18">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC09898.JPG" />
+				<span></span>
+
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="19">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC00429.JPG" />
+				<span></span>
+
+			</div>
+		</div>
+
+		<div class ="box">
+			<div class="innerContent" id="20">
+				<img src="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/DSC01271.JPG" />
+				<span></span>
+
+			</div>
+		</div>		
 
 		</div>
 	</div> <!-- end wrap div -->
