single route plus debugging for posting values

--- a/alexs-photo-clock.html
+++ b/alexs-photo-clock.html
@@ -10,7 +10,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="photo-style.css">
 
-	<script src="/~arc507/CDNI/CDNI-FlipDisplay/js/zepto.min.js"></script>
+	<script src="/js/zepto.min.js"></script>
 
 	<script type="text/javascript">
 
