--- a/alexs-photo-clock.html
+++ b/alexs-photo-clock.html
@@ -8,7 +8,7 @@
 
 	<title>Flipping Shashin</title>
 	
-	<link rel="stylesheet" type="text/css" href="photo-style.css">
+	<link rel="stylesheet" type="text/css" href="http://166.78.159.225/~arc507/CDNI/CDNI-FlipDisplay/photo-style.css">
 
 	<script src="/js/zepto.min.js"></script>
 
